styles.css
body {
    background-color: black;
    margin: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
}

@keyframes spin {
    0% {
        transform: rotateZ(0deg);
    } 100% {
        transform: rotateZ(359deg);
    }
}

@keyframes spin-reverse {
    0% {
        transform: rotateZ(0deg);
    } 100% {
        transform: rotateZ(-359deg);
    }
}

img {
    position: absolute;
    animation: spin 5000ms linear infinite;
}

.radar {
    position: absolute;
    width: 100vw;
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
}

.outer-ring {
    width: 398px;
    height: 398px;
}

.outer-ring-glow {
    width: 437px;
    height: 437px;
}

.sweeper {
    width:399px;
    height:399px;
}

.mask-container {
    display: flex;
    justify-content: center;
    align-items: center;
    position: absolute;
    width: 399px;
    height: 399px;
    z-index: -500;
    mix-blend-mode: screen;
}

.mask {
    width:399px;
    height:399px;
}

.mask-texture {
    width:399px;
    height:399px;
    z-index: -600;
    animation: none;
}

.color {
    position: absolute;
    width: 460px;
    height: 460px;
    background-color: #15ff00;
    z-index: 100;
    mix-blend-mode: overlay;
}

/* page css */

.border {
    width: calc(100vw - 80px);
    height: calc(100vh - 80px);
    border: solid #15ff00 1px;
}

@media (max-width: 768px) {
    .outer-ring,
    .sweeper,
    .mask,
    .mask-texture {
        width: calc(398px * 0.8);
        height: calc(398px * 0.8);
    }

    .outer-ring-glow {
        width: calc(398px * 0.9);
        height: calc(398px * 0.9);
    }

    .mask-container {
        width: calc(399px * 0.8);
        height: calc(399px * 0.8);
    }

    .color {
        width: calc(460px * 0.8);
        height: calc(460px * 0.8);
    }
}

